--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -268,6 +268,10 @@
     <Compile Include="Migrations\201505061813010_CountryMultistore.Designer.cs">
       <DependentUpon>201505061813010_CountryMultistore.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201505272236124_V222.cs" />
+    <Compile Include="Migrations\201505272236124_V222.Designer.cs">
+      <DependentUpon>201505272236124_V222.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
     <Compile Include="Setup\DbMigrationContext.cs" />
@@ -521,6 +525,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201505061813010_CountryMultistore.resx">
       <DependentUpon>201505061813010_CountryMultistore.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505272236124_V222.resx">
+      <DependentUpon>201505272236124_V222.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
