When a customer group gets deleted, a cascade delete is performed on all corresponding AclRecord items

--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -272,6 +272,10 @@
     <Compile Include="Migrations\201505272236124_V222.Designer.cs">
       <DependentUpon>201505272236124_V222.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201506181858349_AclRecordCustomerRole.cs" />
+    <Compile Include="Migrations\201506181858349_AclRecordCustomerRole.Designer.cs">
+      <DependentUpon>201506181858349_AclRecordCustomerRole.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
     <Compile Include="Setup\DbMigrationContext.cs" />
@@ -528,6 +532,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201505272236124_V222.resx">
       <DependentUpon>201505272236124_V222.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201506181858349_AclRecordCustomerRole.resx">
+      <DependentUpon>201506181858349_AclRecordCustomerRole.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
