--- a/src/Plugins/SmartStore.DevTools/Web.config
+++ b/src/Plugins/SmartStore.DevTools/Web.config
@@ -120,6 +120,10 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MiniProfiler" publicKeyToken="b44f9351044011a3" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.1.140" newVersion="3.1.1.140" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
