--- a/src/Plugins/SmartStore.DevTools/packages.config
+++ b/src/Plugins/SmartStore.DevTools/packages.config
@@ -8,4 +8,5 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="MiniProfiler" version="3.1.1.140" targetFramework="net45" />
+  <package id="MiniProfiler.EF6" version="3.0.11" targetFramework="net451" />
 </packages>
