(Perf) Minor enhancement in WorkContext.WorkingCurrency

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -42,7 +42,7 @@
     </microsoftAjax>
     <less useNativeMinification="false" ieCompat="false" strictMath="false" strictUnits="false" dumpLineNumbers="None" javascriptEnabled="true">
       <!-- ATTENTION: If you experience problems with the "V8JsEngine", use "MsieJsEngine" instead -->
-      <jsEngine name="V8JsEngine" />
+      <jsEngine name="MsieJsEngine" />
     </less>
   </bundleTransformer>
   <jsEngineSwitcher xmlns="http://tempuri.org/JavaScriptEngineSwitcher.Configuration.xsd">
