--- a/src/Presentation/SmartStore.Web/Web.Release.config
+++ b/src/Presentation/SmartStore.Web/Web.Release.config
@@ -14,8 +14,7 @@
   </appSettings>
   <system.web>
 	  <compilation xdt:Transform="RemoveAttributes(debug)" />
-    <compilation xdt:Transform="RemoveAttributes(numRecompilesBeforeAppRestart)" />
-    <compilation batch="true" optimizeCompilations="false" xdt:Transform="SetAttributes(batch,optimizeCompilations)" />
+    <compilation xdt:Transform="RemoveAttributes(batch,optimizeCompilations)" />
     <customErrors mode="RemoteOnly" xdt:Transform="SetAttributes(mode)" />
 	</system.web>
   <system.webServer>
