Lots of new stuff and enhancements: * Transient media records (pictures & downloads). Prevents database to be flooded with orphaned records. * Added ToPostedFileResult() extension method for much easier handling of uploaded files (much less code now) * Added new scheduled task 'Clear Transient Uploads' * Added SmartStore.Services.Media.MediaHelper utility class (helps to update media records transient states) * E-mail attachments: MessageTemplates can now reference up to 3 attachments. * Began enhancing the uploader UI for 'Download' * (Perf) several enhancements on database level * Added ShrinkDatabase() extension method to IDbContext

--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -101,7 +101,6 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Linq.Dynamic">
       <HintPath>..\..\packages\System.Linq.Dynamic.1.0.0\lib\net40\System.Linq.Dynamic.dll</HintPath>
     </Reference>
@@ -171,6 +170,7 @@
     <Compile Include="Infrastructure\DependencyManagement\DefaultLifetimeScopeAccessor.cs" />
     <Compile Include="Infrastructure\DependencyManagement\DefaultLifetimeScopeProvider.cs" />
     <Compile Include="Infrastructure\DependencyManagement\ILifetimeScopeAccessor.cs" />
+    <Compile Include="ITransient.cs" />
     <Compile Include="Infrastructure\MostRecentlyUsedList.cs" />
     <Compile Include="Plugins\IConfigurable.cs" />
     <Compile Include="Plugins\Providers\DependentWidgetsAttribute.cs" />
