--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -161,6 +161,8 @@
     <Compile Include="Directory\IQuantityUnitService.cs" />
     <Compile Include="Hooks\SlugSupportedPostDeleteHook.cs" />
     <Compile Include="Hooks\StoreMappingEntityPostDeleteHook.cs" />
+    <Compile Include="Media\MediaExtensions.cs" />
+    <Compile Include="Media\TransientMediaClearTask.cs" />
     <Compile Include="Messages\QueuedMessagesClearTask.cs" />
     <Compile Include="Messages\QueuingEmailEvent.cs" />
     <Compile Include="Messages\QueuingEmailEventConsumer.cs" />
@@ -316,7 +318,6 @@
     <Compile Include="Localization\LocalizationExtentions.cs" />
     <Compile Include="Directory\MeasureService.cs" />
     <Compile Include="Logging\CustomerActivityService.cs" />
-    <Compile Include="Media\Extensions.cs" />
     <Compile Include="Media\IDownloadService.cs" />
     <Compile Include="Media\DownloadService.cs" />
     <Compile Include="Media\IPictureService.cs" />
