DevTools: option to display widget zones

--- a/src/Plugins/SmartStore.DevTools/SmartStore.DevTools.csproj
+++ b/src/Plugins/SmartStore.DevTools/SmartStore.DevTools.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Services\IProfilerService.cs" />
     <Compile Include="Services\ProfilerService.cs" />
     <Compile Include="Settings\ProfilerSettings.cs" />
+    <Compile Include="Widgets\ShowZonesWidget.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Libraries\SmartStore.Core\SmartStore.Core.csproj">
@@ -196,6 +197,9 @@
     </Content>
     <Content Include="Views\Web.config">
       <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Views\DevTools\WidgetZone.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
