Minor migration fix

--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -319,6 +319,10 @@
     <Compile Include="Migrations\201507200832223_SortFilterHomepageProducts.Designer.cs">
       <DependentUpon>201507200832223_SortFilterHomepageProducts.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201507202149123_Merge2.cs" />
+    <Compile Include="Migrations\201507202149123_Merge2.Designer.cs">
+      <DependentUpon>201507202149123_Merge2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
     <Compile Include="Setup\DbMigrationContext.cs" />
@@ -605,6 +609,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201507200832223_SortFilterHomepageProducts.resx">
       <DependentUpon>201507200832223_SortFilterHomepageProducts.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201507202149123_Merge2.resx">
+      <DependentUpon>201507202149123_Merge2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
