--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -440,16 +440,17 @@
     <Compile Include="Stores\IStoreService.cs" />
     <Compile Include="Stores\StoreMappingService.cs" />
     <Compile Include="Stores\StoreService.cs" />
-    <Compile Include="Tasks\ChangeTaskSweeperBaseUrlConsumer.cs" />
+    <Compile Include="Tasks\ChangeTaskSchedulerBaseUrlConsumer.cs" />
     <Compile Include="Tasks\InitializeSchedulerFilter.cs" />
     <Compile Include="Tasks\ITaskExecutor.cs" />
-    <Compile Include="Tasks\ITaskSweeper.cs" />
+    <Compile Include="Tasks\ITaskScheduler.cs" />
     <Compile Include="Tasks\ScheduleTaskService.cs" />
     <Compile Include="Tasks\IScheduleTaskService.cs" />
     <Compile Include="Tasks\ITask.cs" />
     <Compile Include="Tasks\TaskExecutionContext.cs" />
     <Compile Include="Tasks\TaskExecutor.cs" />
-    <Compile Include="Tasks\TaskSweeper.cs" />
+    <Compile Include="Tasks\TaskProgressInfo.cs" />
+    <Compile Include="Tasks\TaskScheduler.cs" />
     <Compile Include="Tax\CalculateTaxRequest.cs" />
     <Compile Include="Tax\CalculateTaxResult.cs" />
     <Compile Include="Tax\FreeTaxProvider.cs" />
