New export profile entity

--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Caching\EfCacheImpl.cs" />
     <Compile Include="Caching\EfCachingPolicy.cs" />
     <Compile Include="Mapping\Directory\QuantityUnitMap.cs" />
+    <Compile Include="Mapping\Export\ExportProfileMap.cs" />
     <Compile Include="Mapping\Messages\QueuedEmailAttachmentMap.cs" />
     <Compile Include="Mapping\Payments\PaymentMethodMap.cs" />
     <Compile Include="Migrations\201403112331027_Initial.cs" />
@@ -331,6 +332,11 @@
     <Compile Include="Migrations\201507250039446_Merge2.Designer.cs">
       <DependentUpon>201507250039446_Merge2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201507301550466_ExportFramework.cs" />
+    <Compile Include="Migrations\201507301550466_ExportFramework.Designer.cs">
+      <DependentUpon>201507301550466_ExportFramework.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Setup\Builder\PermissionMigrator.cs" />
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
     <Compile Include="Setup\DbMigrationContext.cs" />
@@ -626,6 +632,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201507250039446_Merge2.resx">
       <DependentUpon>201507250039446_Merge2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201507301550466_ExportFramework.resx">
+      <DependentUpon>201507301550466_ExportFramework.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
