--- a/src/Presentation/SmartStore.Web/Administration/sitemap.config
+++ b/src/Presentation/SmartStore.Web/Administration/sitemap.config
@@ -127,6 +127,8 @@
       <siteMapNode id="activity-types" iconClass="eye" title="Activity Types" resKey="Admin.Configuration.ActivityLog.ActivityLogType" permissionNames="ManageActivityLog" controller="ActivityLog" action="ListTypes" area="Admin" />
       <siteMapNode id="acl" iconClass="lock" title="Access control list" resKey="Admin.Configuration.ACL" permissionNames="ManageACL" controller="Security" action="Permissions" area="Admin" />
 
+      <siteMapNode id="export" iconClass="sign-out" title="Export" resKey="Common.Export" permissionNames="ManageExports" controller="Export" action="List" area="Admin" />
+
       <siteMapNode id="payment-methods-sep-1" isGroupHeader="true" title="[SKIP]" />
       <siteMapNode id="themes" iconClass="picture-o" title="Themes" resKey="Admin.Configuration.Themes" permissionNames="ManageThemes" controller="Theme" action="List" area="Admin"/>
     </siteMapNode>
