--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -162,8 +162,10 @@
     <Compile Include="Common\UAParserUserAgent.cs" />
     <Compile Include="Directory\QuantityUnitService.cs" />
     <Compile Include="Directory\IQuantityUnitService.cs" />
-    <Compile Include="ExportImport\ExportService.cs" />
-    <Compile Include="ExportImport\IExportService.cs" />
+    <Compile Include="Export\ExportExtensions.cs" />
+    <Compile Include="Export\ExportService.cs" />
+    <Compile Include="Export\IExportProvider.cs" />
+    <Compile Include="Export\IExportService.cs" />
     <Compile Include="Hooks\SlugSupportedPostDeleteHook.cs" />
     <Compile Include="Hooks\StoreMappingEntityPostDeleteHook.cs" />
     <Compile Include="Media\MediaExtensions.cs" />
